# mod_array_io

./: CMakeLists.txt  README.md
include/: array_io.hpp
src/: array_io.cpp
tests/: array_io_test0.cpp
